fix getMusicHistory with API_spec
